--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://codekeep18feb.github.io/blogapp/",
   "name": "toolset",
   "version": "0.1.0",
   "private": true,
@@ -15,8 +16,11 @@
     "turndown": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
