removed a slash from homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://codekeep18feb.github.io/blogapp/",
+  "homepage": "https://codekeep18feb.github.io/blogapp",
   "name": "toolset",
   "version": "0.1.0",
   "private": true,
